--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
 @import url('https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css');
-@import url('animate.min.css');
 @import url('reset.css');
-/* 
-font-family: 'Montserrat', sans-serif;
-font-family: 'Noto Sans KR', sans-serif; 
-*/
+@font-face {
+    font-family: 'Pretendard-Regular';
+    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+}
+
 *{box-sizing: border-box;}
+
 html,body{
     height:100%;
     margin:0;
@@ -18,7 +20,7 @@ a{
     color:#000;
 }
 body{
-    font-family: 'Noto Sans KR', sans-serif; 
+    font-family: 'Pretendard-Regular', sans-serif;
     color:#777;
     font-size:16px;
     overflow-x:hidden;
@@ -26,31 +28,35 @@ body{
 .container{
     max-width:1320px;
 }
+strong{
+    font-weight:900;
+}
+.text-theme{
+    color:#D5C9BF;
+}
+.text-orange{
+    color: #ff6600;
+}
 /**** header ****/
 header{
     width:100%;
     position:fixed;
-    height:50px;
+    height:70px;
     display: flex;
     justify-content: space-between;
     z-index: 10;
-    transition:0.3s;
+    transition:0.5s;
+    align-items: center;
 }
-header:hover{
-    background-color: rgba(0,0,0,0.5);
-    height:55px;
+header.header-act{
+    height:50px;
+    background-color: rgba(213,201,191,0.3);
 }
-header:hover a{
-    color:#fff;
-}
+
 header nav{
     max-width:40%;
     flex:0 0 40%;
-    margin-top:20px;
     margin-right:50px;
-}
-header:hover .gnb li a::after{
-    background-color: #fff;
 }
 .gnb{
     display: flex;
@@ -61,9 +67,7 @@ header:hover .gnb li a::after{
 }
 .gnb li a{
     display:inline-block;
-    font-family: 'Montserrat', sans-serif;
     font-size:20px;
-
     position: relative;
 }
 .gnb li a::after{
@@ -151,13 +155,13 @@ header:hover .hamb span{
     margin-left:50px;
 }
 .intro-text h1{
-    font-family: 'Montserrat', sans-serif;
+
     font-size:70px;
     color:#fff;
     margin:20px 0;
 }
 .intro-text p{
-    font-family: 'Montserrat', sans-serif;
+
     font-size:30px;
     margin-top:40px;
     color:#fff7f7;
@@ -172,7 +176,62 @@ header:hover .hamb span{
 
 /**** Jeffery ****/
 .Jeffery{
+    padding-top:70px;
+}
+.tag-name{
+    text-align: center;
+}
 
+.tag-name h1{
+    color:#D5C9BF;
+    font-size:35px;
+    font-weight: 600;
+    position: relative;
+    text-transform: uppercase;
+}
+.tag-name h1 span{
+    position:absolute;
+    top:-20px;
+    left:50%;
+    transform: translate(-50%);
+    font-size:45px;
+    z-index:-99;
+    color:#ededed;
+    letter-spacing: -2px;
+}
+
+.my-img{
+    width:100%;
+    text-align: center;
+}
+.my-img img{
+    width:80%;
+    border-radius: 10px;
+    margin-top:100px;
+}
+.mytext h1{
+    font-size:40px;
+}
+.mytext{
+    font-size:14px;
+}
+.myskill h1{
+    font-size:40px;
+}
+.myskill h2{
+    font-size:30px;
+}
+.myskill p{
+    font-size:14px;
+    font-weight: 600;
+}
+.myskill p>i{
+    float:right;
+}
+.gugan{
+    width:100%;
+    height:2px;
+    background: linear-gradient(to right, #fff, #ededed, #bdbbbb, #ededed, #fff);
 }
 
 /**** scrollUp ****/
